--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "build": "tsc --project tsconfig.json",
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
-    "prisma:deploy": "prisma migrate deploy"
+    "prisma:deploy": "prisma migrate deploy",
+    "seed:admin": "ts-node scripts/createAdmin.ts"
   },
   "keywords": [],
   "author": "",
@@ -30,6 +31,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^24.5.2",
     "prisma": "^6.16.2",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
