--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fuse.js": "^7.1.0",
+    "idb": "^8.0.3",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -36,6 +37,7 @@
     "react-scripts": "5.0.1",
     "tailwind-merge": "^3.3.1",
     "typescript": "^4.9.5",
+    "workbox-window": "^7.3.0",
     "yet-another-react-lightbox": "^3.25.0",
     "zod": "^4.1.9"
   },
