--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
+    "shadcn": "^3.3.1",
     "tailwindcss": "^3.4.17"
   }
 }
