--- a/server/package.json
+++ b/server/package.json
@@ -19,14 +19,21 @@
     "@aws-sdk/client-bedrock-runtime": "^3.899.0",
     "@prisma/client": "^6.16.2",
     "bcryptjs": "^3.0.2",
+    "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
+    "node-cache": "^5.1.2",
+    "pino": "^9.12.0",
+    "pino-pretty": "^13.1.1",
     "zod": "^4.1.11"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.5",
