--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,12 @@
     "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
     "prisma:deploy": "prisma migrate deploy",
-    "seed:admin": "ts-node scripts/createAdmin.ts"
+    "prisma:push": "prisma db push",
+    "prisma:studio": "prisma studio",
+    "prisma:migrate:dev": "prisma migrate dev",
+    "seed:admin": "ts-node scripts/createAdmin.ts",
+    "db:local": "docker-compose up postgres -d",
+    "db:local:stop": "docker-compose down"
   },
   "keywords": [],
   "author": "",
