--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,19 @@
 
 # misc
 .DS_Store
+
+# Environment files (NEVER commit actual env files with secrets!)
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
+.env.production
+/server/.env.local
+/server/.env.production
+
 .vscode
+.vercel
 
 npm-debug.log*
 yarn-debug.log*
