--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,5 +1,12 @@
 node_modules
-# Keep environment variables out of version control
+dist
+
+# Keep environment variables out of version control - NEVER commit these!
 .env
+.env.local
+.env.production
+.env.development.local
+.env.test.local
+.env.production.local
 
 /src/generated/prisma
