--- a/server/.env.example
+++ b/server/.env.example
@@ -88,11 +88,13 @@ LOG_LEVEL=info# ===========================================
 
 # Comma-separated list of allowed origins
 
-# ===========================================ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
+# ===========================================
+
+# ALLOWED_ORIGINS=https://yourdomain.com,https://www.yourdomain.com
 
 # OPTIONAL: ERROR TRACKING
 
-# ===========================================# ===========================================
+# ===========================================#
 
 # SENTRY_DSN=https://your-sentry-dsn@sentry.io/project-id# OPTIONAL: ERROR TRACKING
 
@@ -104,3 +106,49 @@ LOG_LEVEL=info# ===========================================
 # ===========================================
 # LOG_LEVEL=info
 # LOG_FORMAT=json
+
+# ===========================================
+# MICROSOFT GRAPH API (Office 365 Calendar)
+# ===========================================
+# Instructions to set up Azure AD app:
+# 1. Go to https://portal.azure.com
+# 2. Navigate to "Azure Active Directory" > "App registrations"
+# 3. Click "New registration"
+# 4. Name: "Buete Consulting HMR Calendar"
+# 5. Supported account types: "Accounts in this organizational directory only"
+# 6. Redirect URI: Web - http://localhost:4000/api/auth/microsoft/callback (dev) and https://your-api-domain.com/api/auth/microsoft/callback (prod)
+# 7. After creation, note the "Application (client) ID"
+# 8. Go to "Certificates & secrets" > "New client secret" > Copy the value immediately
+# 9. Go to "API permissions" > "Add a permission" > "Microsoft Graph" > "Delegated permissions"
+#    - Add: Calendars.ReadWrite, User.Read, offline_access
+# 10. Grant admin consent
+
+
+MICROSOFT_CLIENT_ID=your-azure-app-client-id
+MICROSOFT_CLIENT_SECRET=your-azure-app-client-secret
+MICROSOFT_TENANT_ID=common
+MICROSOFT_REDIRECT_URI=http://localhost:4000/api/auth/microsoft/callback
+
+# ===========================================
+# TWILIO SMS CONFIGURATION
+# ===========================================
+# Sign up at https://www.twilio.com/try-twilio
+# Find these values in the Twilio Console
+
+TWILIO_ACCOUNT_SID=your-twilio-account-sid
+TWILIO_AUTH_TOKEN=your-twilio-auth-token
+TWILIO_PHONE_NUMBER=+61XXXXXXXXX
+SMS_ENABLED=false
+
+# ===========================================
+# OPENAI API CONFIGURATION
+# ===========================================
+# Get your API key from https://platform.openai.com/api-keys
+
+OPENAI_API_KEY=sk-your-openai-api-key
+OPENAI_MODEL=gpt-4-turbo-preview
+OPENAI_MAX_TOKENS=4000
+OPENAI_TEMPERATURE=0.3
+
+# AI Provider Selection (bedrock or openai)
+AI_PROVIDER=openai
