--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
   "type": "commonjs",
   "dependencies": {
     "@aws-sdk/client-bedrock-runtime": "^3.899.0",
+    "@azure/msal-node": "^3.8.4",
+    "@microsoft/microsoft-graph-client": "^3.0.7",
     "@prisma/client": "^6.16.2",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.1",
@@ -30,10 +32,13 @@
     "express": "^5.1.0",
     "express-rate-limit": "^8.1.0",
     "helmet": "^8.1.0",
+    "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "node-cache": "^5.1.2",
+    "openai": "^6.15.0",
     "pino": "^9.12.0",
     "pino-pretty": "^13.1.1",
+    "twilio": "^5.11.1",
     "zod": "^4.1.11"
   },
   "devDependencies": {
