--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react-router-dom": "^5.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "fuse.js": "^7.1.0",
     "idb": "^8.0.3",
     "lucide-react": "^0.544.0",
