--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.9.11",
     "postcss": "^8.5.6",
     "shadcn": "^3.3.1",
     "tailwindcss": "^3.4.17"
