--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "@azure/msal-node": "^3.8.4",
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@prisma/client": "^6.16.2",
+    "@types/nodemailer": "^7.0.4",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
@@ -34,6 +35,7 @@
     "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "node-cache": "^5.1.2",
+    "nodemailer": "^7.0.12",
     "openai": "^6.15.0",
     "pino": "^9.12.0",
     "pino-pretty": "^13.1.1",
