--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,13 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc --project tsconfig.json",
+    "build": "npm run prisma:generate && tsc --project tsconfig.json",
     "start": "node dist/index.js",
-    "prisma:generate": "prisma generate",
-    "prisma:deploy": "prisma migrate deploy",
-    "prisma:push": "prisma db push",
-    "prisma:studio": "prisma studio",
-    "prisma:migrate:dev": "prisma migrate dev",
+    "prisma:generate": "dotenv -- prisma generate",
+    "prisma:deploy": "dotenv -- prisma migrate deploy",
+    "prisma:push": "dotenv -- prisma db push",
+    "prisma:studio": "dotenv -- prisma studio",
+    "prisma:migrate:dev": "dotenv -- prisma migrate dev",
     "seed:admin": "ts-node scripts/createAdmin.ts",
     "db:local": "docker-compose up postgres -d",
     "db:local:stop": "docker-compose down"
@@ -23,7 +23,7 @@
   "dependencies": {
     "@azure/msal-node": "^3.8.4",
     "@microsoft/microsoft-graph-client": "^3.0.7",
-    "@prisma/client": "^6.16.2",
+    "@prisma/client": "7.2.0",
     "@types/nodemailer": "^7.0.4",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.1",
@@ -49,7 +49,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^24.5.2",
-    "prisma": "^6.16.2",
+    "prisma": "7.2.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
