--- a/server/package.json
+++ b/server/package.json
@@ -20,9 +20,13 @@
   "author": "",
   "license": "ISC",
   "type": "commonjs",
+  "prisma": {
+    "schema": "prisma/schema.prisma"
+  },
   "dependencies": {
     "@azure/msal-node": "^3.8.4",
     "@microsoft/microsoft-graph-client": "^3.0.7",
+    "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "7.2.0",
     "@types/nodemailer": "^7.0.4",
     "bcryptjs": "^3.0.2",
@@ -37,6 +41,7 @@
     "node-cache": "^5.1.2",
     "nodemailer": "^7.0.12",
     "openai": "^6.15.0",
+    "pg": "^8.13.1",
     "pino": "^9.12.0",
     "pino-pretty": "^13.1.1",
     "twilio": "^5.11.1",
