--- a/server/package.json
+++ b/server/package.json
@@ -54,6 +54,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^24.5.2",
+    "@types/pg": "^8.16.0",
     "prisma": "7.2.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
