chore: update Prisma commands to use npx for execution

--- a/server/package.json
+++ b/server/package.json
@@ -7,11 +7,11 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "npm run prisma:generate && tsc --project tsconfig.json",
     "start": "node dist/index.js",
-    "prisma:generate": "dotenv -- prisma generate",
-    "prisma:deploy": "dotenv -- prisma migrate deploy",
-    "prisma:push": "dotenv -- prisma db push",
-    "prisma:studio": "dotenv -- prisma studio",
-    "prisma:migrate:dev": "dotenv -- prisma migrate dev",
+    "prisma:generate": "dotenv -- npx prisma generate",
+    "prisma:deploy": "dotenv -- npx prisma migrate deploy",
+    "prisma:push": "dotenv -- npx prisma db push",
+    "prisma:studio": "dotenv -- npx prisma studio",
+    "prisma:migrate:dev": "dotenv -- npx prisma migrate dev",
     "seed:admin": "ts-node scripts/createAdmin.ts",
     "db:local": "docker-compose up postgres -d",
     "db:local:stop": "docker-compose down"
