chore: simplify Prisma scripts to use direct commands
Remove dotenv wrapper from Prisma commands in package.json
- Vercel injects environment variables directly
- Simplifies build process
- Fixes build failures with dotenv-cli

--- a/server/package.json
+++ b/server/package.json
@@ -5,13 +5,13 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "npm run prisma:generate && tsc --project tsconfig.json",
+    "build": "prisma generate && tsc --project tsconfig.json",
     "start": "node dist/index.js",
-    "prisma:generate": "dotenv -- npx prisma generate",
-    "prisma:deploy": "dotenv -- npx prisma migrate deploy",
-    "prisma:push": "dotenv -- npx prisma db push",
-    "prisma:studio": "dotenv -- npx prisma studio",
-    "prisma:migrate:dev": "dotenv -- npx prisma migrate dev",
+    "prisma:generate": "prisma generate",
+    "prisma:deploy": "prisma migrate deploy",
+    "prisma:push": "prisma db push",
+    "prisma:studio": "prisma studio",
+    "prisma:migrate:dev": "prisma migrate dev",
     "seed:admin": "ts-node scripts/createAdmin.ts",
     "db:local": "docker-compose up postgres -d",
     "db:local:stop": "docker-compose down"
