--- a/server/package.json
+++ b/server/package.json
@@ -39,6 +39,7 @@
     "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "node-cache": "^5.1.2",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.12",
     "openai": "^6.15.0",
     "pg": "^8.13.1",
@@ -54,6 +55,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^24.5.2",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.16.0",
     "prisma": "7.2.0",
     "ts-node": "^10.9.2",
