--- a/server/package.json
+++ b/server/package.json
@@ -37,6 +37,7 @@
     "helmet": "^8.1.0",
     "isomorphic-fetch": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "node-cache": "^5.1.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.12",
@@ -44,6 +45,7 @@
     "pg": "^8.13.1",
     "pino": "^9.12.0",
     "pino-pretty": "^13.1.1",
+    "resend": "^6.6.0",
     "twilio": "^5.11.1",
     "zod": "^4.1.11"
   },
@@ -53,6 +55,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.5.2",
     "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.16.0",
