feat: Add React Query for API data fetching and caching
- Implemented React Query for automatic caching and improved data fetching in various hooks.
- Created new hooks: useBookingInfo, useBookingSettings, useAvailabilitySlotsQuery, useCreateAvailabilitySlot, useUpdateAvailabilitySlot, and useDeleteAvailabilitySlot.
- Updated existing hooks to utilize new query hooks for better performance and reduced API calls.
- Added QueryProvider to manage React Query client configuration.
- Enhanced Vercel optimization strategies with edge caching and request deduplication.
- Introduced in-memory request caching to minimize duplicate database queries.
- Updated API service to support FormData uploads.
- Revised Vercel configuration for improved function performance and caching headers.

--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,34 @@
   "outputDirectory": "build",
   "functions": {
     "api/index.js": {
-      "maxDuration": 60,
-      "memory": 1024
+      "maxDuration": 30,
+      "memory": 512
     }
   },
   "rewrites": [
     {
       "source": "/api/:path*",
       "destination": "/api/index.js"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/api/booking/public/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "s-maxage=300, stale-while-revalidate=600"
+        }
+      ]
+    },
+    {
+      "source": "/api/healthz",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "s-maxage=60"
+        }
+      ]
     }
   ]
 }
