--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@react-pdf/renderer": "^4.3.1",
+    "@tanstack/react-query": "^5.90.14",
     "@tiptap/extension-color": "^3.6.2",
     "@tiptap/extension-highlight": "^3.6.2",
     "@tiptap/extension-link": "^3.6.2",
