--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "@microsoft/microsoft-graph-client": "^3.0.7",
     "@prisma/client": "^5.22.0",
     "@types/nodemailer": "^7.0.4",
+    "@vercel/edge-config": "^1.4.3",
     "bcryptjs": "^3.0.2",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
