--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "date-fns": "^4.1.0",
     "fuse.js": "^7.1.0",
     "idb": "^8.0.3",
+    "jspdf": "^3.0.4",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
